--- a/requirements-colab.txt
+++ b/requirements-colab.txt
@@ -1,9 +1,12 @@
-tqdm
-numpy==1.17.0
-h5py==2.9.0
-opencv-python==4.1.0.25
-ffmpeg-python==0.1.17
-scikit-image==0.14.2
-scipy==1.4.1
-colorama
-tensorflow-gpu==1.13.2
+!pip uninstall -y tensorflow
+!pip install tqdm
+!pip install numpy==1.17.0
+!pip install h5py==2.9.0
+!pip install opencv-python==4.1.0.25
+!pip install ffmpeg-python==0.1.17
+!pip install scikit-image==0.14.2
+!pip install scipy==1.4.1
+!pip install colorama
+!pip install tensorflow-gpu==1.14.0
+!pip install --upgrade scikit-image
+!sudo apt-get install cuda-10-0
